# controller

./: .coderabbit.yaml  .cursorrules  .dockerignore  .gitignore  .graphqlrc.yml  .npmrc  .pnp.cjs  .prettierignore  .prettierrc.js  .rustfmt.toml  .spr.yml  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.legacy.md  CLAUDE.md  Cargo.toml  Dockerfile.storybook  HEADLESS-API.md  LICENSE  MIGRATION_STATUS.md  Makefile  PLAN.md  POSTHOG_DASHBOARDS.md  PROFILE_MIGRATION_NEXT_STEPS.md  PR_SUMMARY.md  README.md  Scarb.toml  TESTING_VERIFIED_SESSIONS.md  build.rs  bunfig.toml  conductor-setup.sh  conductor.json  expanded.rs  new-changelog-entry.md  output.txt  package.json  parser_config.json  plan.md  pnpm-lock.yaml  (+7 more)
.agents/skills/clean-build/: SKILL.md
.agents/skills/code-review/: SKILL.md
.agents/skills/codegen/: SKILL.md
.agents/skills/controller-development/: SKILL.md
.agents/skills/create-pr/: SKILL.md
.agents/skills/package-filter/: SKILL.md
.agents/skills/pre-commit-check/: SKILL.md
.agents/skills/release-prep/: SKILL.md
.changeset/: khaki-dancers-look.md  mean-insects-shop.md  metal-birds-cough.md  violet-icons-remember.md
.claude/: settings.json  settings.local.json
.claude/commands/: commit.md  pr.md  release.md
.claude/skills/: clean-build.skill.md  codegen.skill.md  dispatch-release  package-filter.skill.md  pre-commit-check  pre-commit-check.skill.md  release-prep.skill.md  test.skill.md
.codex/skills/: clean-build  codegen  package-filter  release-prep  run-tests  test
.cursor/rules/: claude.mdc
.cursor/skills/: update-pr  update-storybook-snapshots  validate-before-merge
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/workflows/: build.yml  changelog-generation.yml  claude-code-review.yml  claude.yml  deploy.yml  docker.yml  docs-sync.yml  e2e.yml  keychain-compatibility.yml  keychain.yml  quality.yml  release-dispatch.yml  release.yml  test.yml  trigger-agent.yml  visual.yml
.husky/: pre-commit
.zed/: settings.json
compat/keychain-browser/: README.md  browser-contract.spec.ts  build-fixtures.mjs  host-entry.ts  index.html  playwright.config.ts  serve.mjs  vite.host.config.ts
compiled/: account.compiled_contract_class.json  account.contract_class.json  cartridge_account.compiled_contract_class.json  cartridge_account.contract_class.json  erc20.contract_class.json
connector/: package.json  tsconfig.json
connector/src/: index.ts
controller/: .env.development  .env.production  codegen.yaml  jest.config.js  package.json  rollup.config.js  tsconfig.json
controller/src/: account.graphql  account.ts  constants.ts  device.ts  errors.ts  index.ts  inject.ts  messenger.ts  modal.ts  signature.test.ts  signer.ts  types.ts  utils.ts  webauthn.ts
crates/account-sdk/: Cargo.toml  README.md
crates/account-sdk/src/: lib.rs
docs/: README.md  docusaurus.config.js  package.json  sidebars.js  vercel.json
docs-repo/: package.json  vocs.config.ts
docs/docs/: configuration.md  controller.md  getting-started.md  intro.md  overview.md  quests.md  sessions.md
documentation/: .gitignore  package.json  tailwind.config.cjs  vercel.json  vite-env.d.ts  vocs.config.ts  vocs.config.ts.timestamp-1730370138239-0899f47314d63.mjs  vocs.config.ts.timestamp-1730410613860-2f2c4b6a5d8fa.mjs
documentation/docs/: styles.css
examples/: headless-test.js  torii.toml
examples/account-sdk/: README.md  package-lock.json  package.json
examples/capacitor/: README.md  capacitor.config.ts  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
examples/get-starknet/: package.json  tsconfig.json
examples/get-starknet-vite/: package.json
examples/minimal/: .env.dev  index.html  package.json  tsconfig.json  vite.config.ts
examples/next/: .env.dev  .env.development  .env.live  .env.production  .gitignore  README.md  eslint.config.mjs  next.config.js  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
examples/node/: .gitignore  README.md  package.json  tsconfig.json
examples/starknet-react-next/: .env.development  .env.production  CHANGELOG.md  README.md  next.config.js  next.config.mjs  package.json  playwright.config.ts  postcss.config.json  tailwind.config.cts  tailwind.config.js  tailwind.config.ts  tsconfig.json
examples/storage-access-test/: README.md  child.html  parent.html
examples/svelte/: .prettierignore  README.md  package.json  tsconfig.json  vite.config.ts
keychain/: .env.development  .env.production  .eslintrc.json  jest.config.js  next.config.js  package.json  tsconfig.json
keychain/core/: connect.ts  deploy.ts  execute.ts  hash.ts  nonce.ts  probe.ts  sdk.ts  sign.ts  verify-hash.ts  verify.ts
keychain/hooks/: controller.ts
keychain/pages/: _app.tsx  index.tsx
keychain/public/: site.webmanifest
keychain/src/: connect.ts  deploy.ts  execute.ts  hash.ts  index.ts  nonce.ts  probe.ts  sign.ts  style.css  verify-hash.ts  verify.ts
keychain/utils/: account.ts  storage.ts
scripts/: assert-starknet-graph.mjs  check_regression.sh  pull_schema.sh  update-storybook-snapshot.sh  validate-packed-consumers.mjs
sdk/: package.json  rollup.config.js  tsconfig.json
sdk/src/: account.ts  index.ts  messenger.ts  signer.ts  types.ts  utils.ts  webauthn.ts
src/: abigen.rs  account.rs  felt_ser.rs  lib.rs  signer.rs  transaction_waiter.rs
src/abigen/: argent_account.rs  cartridge_account.rs  erc_20.rs  mod.rs
src/account/: cartridge.rs  guardian.rs  mod.rs  session.rs
src/deploy_contract/: declaration.rs  pending.rs
src/session/: account.rs  mod.rs
src/session_token/: account.rs  hash.rs  mod.rs  sequence.rs  session.rs  test_utils.rs
src/signers/: mod.rs  starknet.rs
src/tests/: deployment_test.rs  erc20_methods_test.rs  guardian.rs  mod.rs  runners_test.rs  session.rs  signers.rs  stark_pair_auth_test.rs
src/webauthn/: account.rs  json_helper.rs
src/webauthn_signer/: account.rs  cairo_args.rs  credential.rs  mod.rs
ui/: .eslintrc.json  README.md  package.json  rollup.config.js  tsconfig.json
ui/.storybook/: preview.ts
ui/src/: index.ts
(+446 files in other folders)
