[workspace]
resolver = "2"
members = ["packages/account_sdk", "packages/account-wasm"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
account-sdk = { path = "packages/account_sdk" }
account_wasm = { path = "packages/account-wasm" }

anyhow = "1"
async-trait = "0.1"
base64 = "0.21"
cainome = { git = "https://github.com/piniom/cainome", rev = "beb1f1f5" }
cairo-lang-starknet = "2.4.0"
coset = { version = "0.3.4", features = ["std"] }
ecdsa = "0.16.9"
futures = "0.3"
lazy_static = "1"
p256 = "0.13"
primitive-types = { version = "0.12", default-features = false }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = "1"
serde_json = "1"
sha2 = "0.10"
starknet = "0.10.0"
starknet-crypto = "0.6.1"
thiserror = "1"
toml = "0.8"
u256-literal = "1"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
wasm-webauthn = { git = "https://github.com/cartridge-gg/wasm-webauthn", rev = "972693f" }
tokio = { version = "1", features = ["macros", "time"] }
