[package]
name = "account-sdk-wasm"
version = "0.1.0"
authors = ["JunichiSugiura <jun.sugiura.jp@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

account-sdk = { git = "https://github.com/cartridge-gg/cairo-webauthn.git", rev = "0c7e87e206310a59dec3faf2b3acdf84fd469c8b" }
starknet = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
